Tests/testsuite/negative/duplicate_initial_attribute.n
using Nemerle;
using Nemerle.Collections;
using Nemerle.Text;
using Nemerle.Utility;

using System;
using Nemerle.Statechart;

using System.Collections.Generic;
using System.Linq;

  /// <summary>
  /// Description of junction_example.
  /// </summary>
[statechart(
  <#
  name "several initial attributes";

  state A
  {
    [Initial] // E: Attribute \[Initial\] on state "B" is used on another state in same composite state
    state B
    {
    }

    [Initial] // E: Attribute \[Initial\] on state "C" is used on another state in same composite state
    state C
    {
    }
  }

  #>)]
public class example
{
}

